--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "jest --coverage=true  --forceExit"
   },
   "repository": {
@@ -22,9 +22,10 @@
     "joi": "13.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "promise-mysql2": "^1.0.0",
+    "mysql2": "^3.9.1",
     "qs": "^6.10.3",
-    "semver": "^7.3.5"
+    "semver": "^7.3.5",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
@@ -36,6 +37,7 @@
     "jest": "^29.7.0",
     "jest-sonar": "^0.2.12",
     "prettier": "^2.5.1",
+    "sequelize-cli": "^6.6.2",
     "supertest": "^6.3.3"
   }
 }
