--- a/.eslintrc
+++ b/.eslintrc
@@ -14,10 +14,13 @@
     "sourceType": "module"
   },
   "rules": {
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "no-underscore-dangle": "off",
     "no-param-reassign": "off",
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "import/no-dynamic-require": "off",
+    "global-require": "off",
+    "strict": "off",
+    "no-unused-vars": "off"
   }
 }
-  
